--- a/DrawingNode/bin/.classpath
+++ b/DrawingNode/bin/.classpath
@@ -6,16 +6,8 @@
 			<attribute name="module" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Huy Q Phung/Desktop/SW_Project_A/SWE-Atrax/DrawingNode/lib/derby.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/Huy Q Phung/Desktop/SW_Project_A/SWE-Atrax/DrawingNode/lib/pdfbox-2.0.9.jar">
-		<attributes>
-			<attribute name="module" value="true"/>
-		</attributes>
-	</classpathentry>
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
+	<classpathentry kind="lib" path="lib/pdfbox-2.0.9.jar"/>
+	<classpathentry kind="lib" path="lib/derby.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
