--- a/DrawingNode/.classpath
+++ b/DrawingNode/.classpath
@@ -9,5 +9,8 @@
 	<classpathentry kind="con" path="org.eclipse.fx.ide.jdt.core.JAVAFX_CONTAINER"/>
 	<classpathentry kind="lib" path="lib/pdfbox-2.0.9.jar"/>
 	<classpathentry kind="lib" path="lib/derby.jar"/>
+	<classpathentry kind="lib" path="lib/jfoenix-9.0.1.jar"/>
+	<classpathentry kind="lib" path="lib/reactfx-2.0-M5.jar"/>
+	<classpathentry kind="lib" path="lib/livedirsfx-1.0.0-20150923.160001-9.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
