--- a/PDFBox/.classpath
+++ b/PDFBox/.classpath
@@ -1,49 +1,47 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.launching.macosx.MacOSXType/Java SE 9.0.4 [9.0.4]">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/fontbox-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/pdfbox-2.0.8.jar" sourcepath="C:/Users/dolly/Downloads/pdfbox-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/pdfbox-tools-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/preflight-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/xmpbox-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/pdfbox-app-2.0.8.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/aopalliance-repackaged-2.5.0-b30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/grizzly-framework-2.3.28.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/grizzly-http-2.3.28.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/grizzly-http-server-2.3.28.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/hk2-api-2.5.0-b30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/hk2-locator-2.5.0-b30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/hk2-utils-2.5.0-b30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/hppc-0.7.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jackson-annotations-2.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jackson-core-2.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jackson-databind-2.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jackson-jaxrs-base-2.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jackson-jaxrs-json-provider-2.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jackson-module-jaxb-annotations-2.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/javassist-3.20.0-GA.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/javax.annotation-api-1.2.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/javax.inject-2.5.0-b30.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/javax.ws.rs-api-2.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jcommander-1.48.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-client-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-common-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-container-grizzly2-http-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-entity-filtering-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-guava-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-media-jaxb-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-media-json-jackson-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/jersey-server-2.25.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/morfologik-fsa-2.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/morfologik-fsa-builders-2.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/morfologik-stemming-2.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/morfologik-tools-2.1.3.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/opennlp-brat-annotator-1.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/opennlp-morfologik-addon-1.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/opennlp-tools-1.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/opennlp-uima-1.8.4.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/osgi-resource-locator-1.0.1.jar"/>
-	<classpathentry kind="lib" path="C:/Users/dolly/Downloads/apache-opennlp-1.8.4-bin(1)/apache-opennlp-1.8.4/lib/validation-api-1.1.0.Final.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/aopalliance-repackaged-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/grizzly-framework-2.3.28.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/grizzly-http-2.3.28.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/grizzly-http-server-2.3.28.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/hk2-api-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/hk2-locator-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/hk2-utils-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/hppc-0.7.1.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jackson-annotations-2.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jackson-core-2.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jackson-databind-2.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jackson-jaxrs-base-2.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jackson-jaxrs-json-provider-2.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jackson-module-jaxb-annotations-2.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/javassist-3.20.0-GA.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/javax.annotation-api-1.2.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/javax.inject-2.5.0-b30.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/javax.ws.rs-api-2.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jcommander-1.48.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-client-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-common-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-container-grizzly2-http-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-entity-filtering-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-guava-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-media-jaxb-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-media-json-jackson-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/jersey-server-2.25.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/morfologik-fsa-2.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/morfologik-fsa-builders-2.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/morfologik-stemming-2.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/morfologik-tools-2.1.3.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/opennlp-brat-annotator-1.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/opennlp-morfologik-addon-1.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/opennlp-tools-1.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/opennlp-uima-1.8.4.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/osgi-resource-locator-1.0.1.jar"/>
+	<classpathentry kind="lib" path="/Users/conghienhoang/Documents/GitHub/SWE-Atrax/PDFBox/lib/validation-api-1.1.0.Final.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
