--- a/DrawingNode/bin/.gitignore
+++ b/DrawingNode/bin/.gitignore
@@ -1,2 +1,11 @@
-/src/
+/.classpath
+/.project
+/.settings/
+/TestPdf/
 /atraxdb/
+/build.fxbuild
+/en-pos-maxent.bin
+/en-sent.bin
+/f5c9bdb64a87dd158cc0dd42fe3d6028.jpg
+/lib/
+/src/
