Added delete method for a single document as well as deleting a whole library

--- a/DrawingNode/bin/.gitignore
+++ b/DrawingNode/bin/.gitignore
@@ -1,3 +1,12 @@
-/src/
+/.classpath
+/.project
+/.settings/
+/TestPdf/
 /atraxdb/
-/build.xml
+/build.fxbuild
+/derby.log
+/en-pos-maxent.bin
+/en-sent.bin
+/f5c9bdb64a87dd158cc0dd42fe3d6028.jpg
+/lib/
+/src/
