--- a/DrawingNode/bin/.classpath
+++ b/DrawingNode/bin/.classpath
@@ -54,5 +54,6 @@
 	<classpathentry kind="lib" path="lib/preflight-2.0.8.jar"/>
 	<classpathentry kind="lib" path="lib/preflight-app-2.0.8.jar"/>
 	<classpathentry kind="lib" path="lib/xmpbox-2.0.8.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/5"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
