Fix GroidPath & Add library icon

--- a/DrawingNode/bin/.gitignore
+++ b/DrawingNode/bin/.gitignore
@@ -11,3 +11,6 @@
 /lib/
 /src/
 /books-certificate-collection-of-study-learning-school-37a090ff7826e98f-512x512.png
+/196124.png
+/196124.jpg
+/Icon/
