Create relevant document branch for integration

--- a/DrawingNode/bin/.gitignore
+++ b/DrawingNode/bin/.gitignore
@@ -1,1 +1,13 @@
+/.classpath
+/.project
+/.settings/
+/TestPdf/
+/atraxDatabase/
+/atraxdb/
+/build.fxbuild
+/derby.log
+/en-pos-maxent.bin
+/en-sent.bin
+/f5c9bdb64a87dd158cc0dd42fe3d6028.jpg
+/lib/
 /src/
